# lizenztool

./: .coverage  .dockerignore  .gitignore  Caddyfile  Dockerfile  MAINTENANCE.md  README.de.md  README.md  build.sh  docker-compose.yml  lizenztool.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-railway.yml  publish-docker.yml
lizenztool/: api.py  config.py  main.py  metadata.py  overlay.py  prompts.py
lizenztool/static/: i18n.js  index.html
lizenztool/static/locales/: de.json  en.json
tests/: conftest.py  test_api_core.py  test_api_endpoints.py  test_config.py  test_metadata.py  test_security.py
