[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lizenztool"
version = "1.2.0"
requires-python = ">=3.11"
dependencies = [
    "pyexiftool>=0.5",
    "Pillow>=10.0",
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
]

[project.scripts]
lizenztool = "lizenztool.main:app"
